# sie-lsp

./: CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
sie-lsp/: Cargo.toml  README.md
sie-lsp/src/: lib.rs  semtok.rs
sie-parser/: Cargo.toml
sie-parser/src/: cp437.rs  diagnostics.rs  document.rs  labels.rs  lib.rs  parser.rs  types.rs
sie-parser/tests/: broken.rs  sample.rs
src/: cp437.rs  lib.rs  main.rs  parser.rs  semtok.rs  types.rs
tests/: broken.rs
tests/fixtures/: broken.se  sample.se
