[package]
name = "sie-lsp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Language server and CLI for the SIE 4B bookkeeping file format"
repository = "https://github.com/t4t5/sie-lsp"

[dependencies]
sie-parser = "0.1"
baskontoplan = "0.1"
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tower-lsp = "0.20"

[lib]
name = "sie_lsp"
path = "src/lib.rs"

[[bin]]
name = "sie"
path = "src/main.rs"

[[bin]]
name = "sie-lsp"
path = "src/bin/sie-lsp.rs"

# For local development against the in-repo sie-parser crate.
# Remove or comment out before publishing to crates.io.
[patch.crates-io]
sie-parser = { path = "../sie-parser" }
