[package]
name = "sie-parser"
version = "0.1.0"
edition = "2024"
description = "Parser, encoder, and typed document model for SIE 4B bookkeeping files"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "sie_parser"
path = "src/lib.rs"
